# MSSubmission1234567890

./: .gitignore
client/web/: angular.json  package-lock.json  package.json
compiler/: CMakeCache.txt  CMakeLists.txt  MSCVProject  Makefile  cmake_install.cmake  compile_commands.json  includes.h  includes2.h  includes3.h  main  main.cc  main.q  notes.txt  script.q
compiler_backup/: CMakeCache.txt  CMakeLists.txt  MSCVProject.cbp  Makefile  compile_commands.json  main.cc  script.q  updatecmake.sh
compiler_test/: main.js  main2.js  mainmain.js  package-lock.json
database/: build_db.sh  clear_fundamentals.sh  docker-compose.yml
files/: SP500RIC.csv  rics_iex.csv
server/PRICES_GET/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main  main.cc
server/TRTH_BUILDER/: CMakeLists.txt  FinalIEXTRTHSymbolsList.csv  FinalIEXTRTHSymbolsList1.csv  IEXSymbolsList.txt  IEXTRTHSymbolsList.csv  IEXTRTHSymbolsList.txt  cmake_install.cmake  main.cc
server/TRTH_BUILDER/cpr/opt/curl/CMake/: cmake_uninstall.cmake
server/TRTH_BUILDER/cpr/opt/curl/docs/: CTestTestfile.cmake
server/TRTH_BUILDER/cpr/opt/curl/docs/cmdline-opts/: CTestTestfile.cmake
server/TRTH_COMMITER_TICKER/: CMakeCache.txt  FinalIEXTRTHSymbolsList.csv  IEXSymbolsList.txt  Makefile  compile_commands.json  main  main.cc
server/TRTH_IMPORTER/: CMakeCache.txt  MSCVProject  Makefile  build.sh  cmake_install.cmake  compile_commands.json  main  main.cc
server/TRTH_MINIFIER/: CMakeCache.txt  IEXTRTHSymbolListExtract.csv  Makefile  cmake_install.cmake  compile_commands.json  main
server/TRTH_SPLITTER_COMMITER/: CMakeCache.txt  FinalSymbolsListPart1.csv  FinalSymbolsListPart10.csv  FinalSymbolsListPart100.csv  FinalSymbolsListPart1000.csv  FinalSymbolsListPart1001.csv  FinalSymbolsListPart1002.csv  FinalSymbolsListPart1003.csv  FinalSymbolsListPart1004.csv  FinalSymbolsListPart1005.csv  FinalSymbolsListPart1006.csv  (+2302 more)
server/WATCHLIST_POST/: CMakeCache.txt  CMakeLists.txt  MSCVProject  Makefile  build.sh  cmake_install.cmake  compile_commands.json  includes.h  listener.h  main.cc  requests.h
submission/: Service Presentation for a Stock Backtesting Terminal.pptx  algobollingerws.py  algoemaws.py  algomacdws.py  algorsiws.py  algosmaws.py  calenderevents.py  calendermarkers.py  cnbccrawl.js  education.py  information.py  kubedeploy.yml  kubeservice.yml  log.py  news.py  nytcrawl.js  package-lock.json  personalizations.py  pricews.py  profile.py  testappl.py  users.py  versions.py  watchlists.py  watchliststock.py  yahoo.js  yahooprice.js
submission/ema/: CMakeLists.txt  Dockerfile  Makefile  algo.cc  algo.h  session.cc  util.cc
trth_crawler/: main.js  package-lock.json
(+115 files in other folders)
